--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.5.2",
     "react-motion": "^0.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "reactstrap": "^6.5.0"
   },
   "proxy": "http://localhost:8080/",
   "scripts": {
