Upload direct to S3

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 IMAGE_FILE_LOCATION_PREFIX=http:localhost:8080/
+AWS_ACCESS_KEY_ID=AKIAJGDZNOOH5XNN5SRQ
+AWS_SECRET_ACCESS_KEY=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
+S3_BUCKET=test-node-koalagram-server-mg
