--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.4.1",
     "ajv": "^6.0.0",
+    "aws-sdk": "^2.353.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "jwt-decode": "^2.2.0",
